baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__generic_subtype_rejection.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Generic"
Word "subtype"
Word "rejection"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Mismatched"
Word "instantiations"
Word "of"
Word "the"
Word "same"
Class "class"
Word "must"
Word "be"
Word "rejected"
Dot "."
Class "class"
Word "Box"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
Word "T"
RBrace "}"
Function "function"
Word "take_string_box"
LParen "("
Word "b"
Colon ":"
Word "Box"
Less "<"
Word "string"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "null"
RBrace "}"
Slash "/"
Slash "/"
Word "Should"
Word "produce"
Word "a"
Word "type"
Word "error"
Colon ":"
Word "Box"
Less "<"
Word "int"
Greater ">"
Word "is"
Word "not"
Word "assignable"
Word "to"
Word "Box"
Less "<"
Word "string"
Greater ">"
Function "function"
Word "bad_box_mismatch"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "take_string_box"
LParen "("
Word "Box"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
IntegerLiteral "1"
RBrace "}"
RParen ")"
RBrace "}"
