baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__heterogeneous_collection.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Heterogeneous"
Word "stored"
Word "callback"
Word "collection"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Array"
Word "literal"
Word "should"
Word "widen"
Word "element"
Word "types"
Word "via"
Word "union"
Dot "."
Class "class"
Word "Task"
Less "<"
Word "E"
Greater ">"
LBrace "{"
Word "name"
Colon ":"
Word "string"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "E"
RBrace "}"
Function "function"
Word "run_tasks"
LParen "("
Word "tasks"
Colon ":"
Word "Task"
Less "<"
Word "string"
Pipe "|"
Word "int"
Greater ">"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
For "for"
LParen "("
Let "let"
Word "task"
In "in"
Word "tasks"
RParen ")"
LBrace "{"
Word "task"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Word "null"
RBrace "}"
Function "function"
Word "make_mixed_tasks"
LParen "("
RParen ")"
Arrow "->"
Word "Task"
Less "<"
Word "string"
Pipe "|"
Word "int"
Greater ">"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "Task"
LBrace "{"
Word "name"
Colon ":"
Quote "\""
Word "a"
Quote "\""
Comma ","
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Quote "\""
Word "error"
Quote "\""
RBrace "}"
RBrace "}"
Comma ","
Word "Task"
LBrace "{"
Word "name"
Colon ":"
Quote "\""
Word "b"
Quote "\""
Comma ","
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RBrace "}"
Comma ","
RBracket "]"
RBrace "}"
Function "function"
Word "test_run_mixed_tasks"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "run_tasks"
LParen "("
Word "make_mixed_tasks"
LParen "("
RParen ")"
RParen ")"
RBrace "}"
