baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__hof_own_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "HOF"
Word "with"
Word "its"
Word "own"
Throws "throws"
Plus "+"
Word "callback"
Throws "throws"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "A"
Function "function"
Word "that"
Word "both"
Throws "throws"
Word "itself"
Word "AND"
Word "rethrows"
Word "callback"
Word "effects"
Dot "."
Slash "/"
Slash "/"
Word "The"
Word "effective"
Throws "throws"
Word "should"
Word "be"
Word "the"
Word "UNION"
Word "of"
Word "both"
Dot "."
Function "function"
Word "apply_guarded"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
Word "f"
LParen "("
RParen ")"
If "if"
LParen "("
Word "result"
Less "<"
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "negative"
Word "result"
Quote "\""
RBrace "}"
Word "result"
RBrace "}"
Slash "/"
Slash "/"
Word "Pure"
Word "callback"
Colon ":"
Function "function"
Error "'"
Word "s"
Word "own"
Throw "throw"
Word "should"
Word "still"
Word "appear"
Function "function"
Word "test_guarded_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_guarded"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Throwing"
Word "callback"
Colon ":"
Word "both"
Word "the"
Function "function"
Error "'"
Word "s"
Word "own"
Throw "throw"
Word "and"
Word "the"
Word "callback"
Error "'"
Word "s"
Throw "throw"
Function "function"
Word "test_guarded_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_guarded"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
IntegerLiteral "99"
RBrace "}"
RParen ")"
RBrace "}"
