baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__hof_rethrows.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "HOF"
Word "rethrows"
Colon ":"
Word "effect"
Word "propagation"
Word "through"
Word "higher-order"
Word "functions"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Basic"
Word "rethrows"
Minus "-"
Word "pure"
Word "callback"
Function "function"
Word "run_pure"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_run_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "run_pure"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Basic"
Word "rethrows"
Minus "-"
Word "throwing"
Word "callback"
Function "function"
Word "run_throwing"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_run_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "run_throwing"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Rethrows"
Word "with"
Word "multiple"
Word "callback"
Word "params"
Function "function"
Word "run_two"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Comma ","
Word "g"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
Plus "+"
Word "g"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_two_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "run_two"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "1"
RBrace "}"
Comma ","
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "2"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_two_one_throws"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "run_two"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "1"
RBrace "}"
Comma ","
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_two_both_throw"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "run_two"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "a"
Quote "\""
RBrace "}"
Comma ","
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Rethrows"
Word "with"
Word "parametric"
Word "callback"
Function "function"
Word "map_it"
LParen "("
Word "x"
Colon ":"
Word "int"
Comma ","
Word "f"
Colon ":"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
Function "function"
Word "test_map_it_pure"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "map_it"
LParen "("
IntegerLiteral "1"
Comma ","
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_map_it_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "map_it"
LParen "("
IntegerLiteral "1"
Comma ","
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Throw "throw"
Quote "\""
Word "bad"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
