baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__hof_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Higher-order"
Function "function"
Throws "throws"
Word "propagation"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Function"
Word "taking"
Word "a"
Word "callback"
Word "and"
Word "calling"
Word "it"
Function "function"
Word "apply"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Calling"
Word "apply"
Word "with"
Word "a"
Word "pure"
Word "lambda"
Function "function"
Word "test_apply_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Calling"
Word "apply"
Word "with"
Word "a"
Word "throwing"
Word "lambda"
Function "function"
Word "test_apply_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "taking"
Word "callback"
Word "with"
Word "explicit"
Throws "throws"
Function "function"
Word "apply_throwing"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_explicit_throws"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_throwing"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "that"
Word "takes"
Word "a"
Word "callback"
Word "and"
Word "calls"
Word "it"
Comma ","
Word "with"
Word "its"
Word "own"
Throw "throw"
Function "function"
Word "apply_and_throw"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
Word "f"
LParen "("
RParen ")"
If "if"
LParen "("
Word "result"
Less "<"
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "negative"
Word "result"
Quote "\""
RBrace "}"
Word "result"
RBrace "}"
Function "function"
Word "test_apply_and_throw_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_and_throw"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "with"
Word "omitted"
Throws "throws"
Word "that"
Word "still"
Throws "throws"
Word "from"
Word "its"
Word "body"
Dot "."
Function "function"
Word "helper_with_body_throw"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "helper"
Word "boom"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Wrapper"
Word "should"
Word "keep"
Word "the"
Word "helper"
Error "'"
Word "s"
Word "concrete"
Word "body"
Throw "throw"
Word "alongside"
Word "callback"
Word "effects"
Dot "."
Function "function"
Word "apply_with_helper"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "helper_with_body_throw"
LParen "("
RParen ")"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_with_helper_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_with_helper"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_with_helper_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_with_helper"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Explicitly"
Word "under-declaring"
Word "a"
Word "direct"
Word "callback"
Word "rethrow"
Word "should"
Word "fail"
Word "contract"
Word "checking"
Dot "."
Function "function"
Word "apply_underdeclared"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Unused"
Word "callback"
Word "params"
Word "should"
Word "not"
Word "widen"
Word "the"
Word "wrapper"
Word "outward"
Throws "throws"
Dot "."
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "callback"
Word "parameter"
Error "`"
Word "f"
Error "`"
Word "has"
Word "implicit"
Word "effect"
Word "polymorphism"
Word "but"
Word "is"
Word "not"
Word "directly"
Word "invoked"
Function "function"
Word "ignore_callback"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
Function "function"
Word "test_ignore_callback_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "ignore_callback"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "unused"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Aliased"
Word "callback"
Word "invocation"
Colon ":"
Word "the"
Word "rethrow"
Word "is"
Word "NOT"
Word "propagated"
Word "because"
Word "the"
Slash "/"
Slash "/"
Word "syntactic"
Word "scan"
Word "only"
Word "recognizes"
Word "direct"
Error "`"
Word "f"
LParen "("
RParen ")"
Error "`"
Word "calls"
Dot "."
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "callback"
Word "parameter"
Error "`"
Word "f"
Error "`"
Word "has"
Word "implicit"
Word "effect"
Word "polymorphism"
Word "but"
Word "is"
Word "not"
Word "directly"
Word "invoked"
Function "function"
Word "apply_aliased"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "g"
Equals "="
Word "f"
Word "g"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_aliased_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_aliased"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "aliased"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Concrete"
Word "body"
Throws "throws"
Word "still"
Word "escape"
Word "even"
Word "when"
Word "the"
Word "callback"
Word "is"
Word "never"
Word "invoked"
Dot "."
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "callback"
Word "parameter"
Error "`"
Word "f"
Error "`"
Word "has"
Word "implicit"
Word "effect"
Word "polymorphism"
Word "but"
Word "is"
Word "not"
Word "directly"
Word "invoked"
Function "function"
Word "ignore_callback_but_throw"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "helper_with_body_throw"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_ignore_callback_but_throw"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "ignore_callback_but_throw"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
