baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__lambda_throws_explicit.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Lambda"
Word "explicit"
Throws "throws"
Word "annotations"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "explicit"
Throws "throws"
Word "string"
Minus "-"
Word "body"
Word "matches"
Function "function"
Word "test_explicit_throws_match"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "explicit"
Throws "throws"
Word "never"
Minus "-"
Word "body"
Word "is"
Word "pure"
LParen "("
Word "should"
Word "be"
Word "fine"
RParen ")"
Function "function"
Word "test_explicit_throws_never_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "explicit"
Throws "throws"
Word "string"
Minus "-"
Word "body"
Word "is"
Word "pure"
LParen "("
Word "should"
Word "be"
Word "fine"
Comma ","
Word "never"
Less "<"
Colon ":"
Word "string"
RParen ")"
Function "function"
Word "test_explicit_throws_wider_than_body"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
