baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__lambda_throws_infer.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Lambda"
Throws "throws"
Word "inference"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Pure"
Word "lambda"
Minus "-"
Word "should"
Word "infer"
Throws "throws"
Colon ":"
Word "never"
Function "function"
Word "test_pure_lambda"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Throwing"
Word "lambda"
Minus "-"
Word "should"
Word "infer"
Throws "throws"
Colon ":"
Word "string"
Function "function"
Word "test_throwing_lambda"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "throwing"
Word "int"
Minus "-"
Word "should"
Word "infer"
Throws "throws"
Colon ":"
Word "int"
Function "function"
Word "test_throwing_int"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "conditional"
Throw "throw"
Minus "-"
Word "only"
Word "one"
Word "branch"
Throws "throws"
Function "function"
Word "test_conditional_throw"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
If "if"
LParen "("
Word "n"
Less "<"
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "negative"
Quote "\""
RBrace "}"
Word "n"
RBrace "}"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "multiple"
Throw "throw"
Word "types"
Minus "-"
Word "should"
Word "infer"
Throws "throws"
Colon ":"
Word "string"
Pipe "|"
Word "int"
Function "function"
Word "test_multi_throw_types"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "n"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Quote "\""
Word "string"
Word "error"
Quote "\""
Comma ","
IntegerLiteral "1"
FatArrow "=>"
Throw "throw"
IntegerLiteral "1"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
