baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__lambda_throws_violation.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Lambda"
Throws "throws"
Word "contract"
Word "violations"
LParen "("
Word "should"
Word "produce"
Word "errors"
RParen ")"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Lambda"
Word "with"
Word "explicit"
Throws "throws"
Word "never"
Word "but"
Word "body"
Throws "throws"
Minus "-"
Word "should"
Word "error"
Function "function"
Word "test_throws_never_but_throws"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
