baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__member_receiver_shapes.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 11289
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Additional"
Word "member"
Word "receiver"
Throws "throws"
Word "propagation"
Word "shapes"
EqualsEquals "=="
Equals "="
Class "class"
Word "EdgeHandler"
Less "<"
Word "E"
Greater ">"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "E"
RBrace "}"
Class "class"
Word "EdgeHolder"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "item"
Colon ":"
Word "T"
RBrace "}"
Word "type"
Word "EdgeStringHandler"
Equals "="
Word "EdgeHandler"
Less "<"
Word "string"
Greater ">"
Class "class"
Word "EdgeService"
LBrace "{"
Word "primary"
Colon ":"
Word "EdgeHandler"
Less "<"
Word "string"
Greater ">"
Function "function"
Word "call_self_field"
LParen "("
Word "self"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "self"
Dot "."
Word "primary"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "call_self_alias"
LParen "("
Word "self"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Let "let"
Word "me"
Equals "="
Word "self"
Word "me"
Dot "."
Word "primary"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
RBrace "}"
Function "function"
Word "make_edge_handler"
LParen "("
RParen ")"
Arrow "->"
Word "EdgeHandler"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "EdgeHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Quote "\""
Word "edge"
Word "boom"
Quote "\""
RBrace "}"
RBrace "}"
RBrace "}"
Function "function"
Word "call_returned_receiver"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "make_edge_handler"
LParen "("
RParen ")"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "call_typed_local_receiver"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Let "let"
Word "h"
Colon ":"
Word "EdgeHandler"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "make_edge_handler"
LParen "("
RParen ")"
Word "h"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "call_nested_alias_receiver"
LParen "("
Word "h"
Colon ":"
Word "EdgeHandler"
Less "<"
Word "string"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Let "let"
Word "a"
Equals "="
Word "h"
Let "let"
Word "b"
Equals "="
Word "a"
Word "b"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "call_field_chained_receiver"
LParen "("
Word "holder"
Colon ":"
Word "EdgeHolder"
Less "<"
Word "EdgeStringHandler"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "holder"
Dot "."
Word "item"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
