baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__mixed_params.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Mixed"
Colon ":"
Function "function"
Word "with"
Word "both"
Function "function"
Word "and"
Word "non-function"
Word "params"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Only"
Word "the"
Function "function"
Word "param"
Word "should"
Word "get"
Word "an"
Word "effect"
Word "var"
Function "function"
Word "apply_with_arg"
LParen "("
Word "x"
Colon ":"
Word "int"
Comma ","
Word "f"
Colon ":"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
Function "function"
Word "test_mixed_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_with_arg"
LParen "("
IntegerLiteral "5"
Comma ","
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "n"
Star "*"
IntegerLiteral "2"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_mixed_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_with_arg"
LParen "("
IntegerLiteral "5"
Comma ","
LParen "("
Word "n"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
If "if"
LParen "("
Word "n"
Less "<"
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "negative"
Quote "\""
RBrace "}"
Word "n"
Star "*"
IntegerLiteral "2"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Multiple"
Word "non-function"
Word "params"
Word "with"
Word "one"
Word "callback"
Function "function"
Word "apply_with_many_args"
LParen "("
Word "a"
Colon ":"
Word "int"
Comma ","
Word "b"
Colon ":"
Word "string"
Comma ","
Word "f"
Colon ":"
LParen "("
Word "int"
Comma ","
Word "string"
RParen ")"
Arrow "->"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "f"
LParen "("
Word "a"
Comma ","
Word "b"
RParen ")"
RBrace "}"
Function "function"
Word "test_many_args_pure"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "apply_with_many_args"
LParen "("
IntegerLiteral "1"
Comma ","
Quote "\""
Word "hello"
Quote "\""
Comma ","
LParen "("
Word "n"
Colon ":"
Word "int"
Comma ","
Word "s"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "s"
RBrace "}"
RParen ")"
RBrace "}"
