baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__nested_lambda_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Nested"
Word "lambda"
Throws "throws"
Word "behavior"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Inner"
Word "lambda"
Throws "throws"
Comma ","
Word "outer"
Word "doesn"
Error "'"
Word "t"
Throw "throw"
Word "directly"
Function "function"
Word "test_nested_inner_throws"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "inner"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "inner"
Word "boom"
Quote "\""
RBrace "}"
Word "inner"
LParen "("
RParen ")"
RBrace "}"
Word "outer"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Outer"
Word "lambda"
Throws "throws"
Comma ","
Word "inner"
Word "is"
Word "pure"
Function "function"
Word "test_nested_outer_throws"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "inner"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
Throw "throw"
Quote "\""
Word "outer"
Word "boom"
Quote "\""
RBrace "}"
Word "outer"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Both"
Throw "throw"
Word "different"
Word "types"
Function "function"
Word "test_nested_both_throw"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "inner"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
Word "inner"
LParen "("
RParen ")"
Throw "throw"
Quote "\""
Word "outer"
Quote "\""
RBrace "}"
Word "outer"
LParen "("
RParen ")"
RBrace "}"
