baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__optional_call_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Optional"
Word "call"
Word "should"
Word "propagate"
Word "callback"
Throws "throws"
EqualsEquals "=="
Equals "="
Function "function"
Word "optional_call_rethrows"
LParen "("
Word "cb"
Colon ":"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RParen ")"
Question "?"
RParen ")"
Arrow "->"
Word "int"
Question "?"
LBrace "{"
Word "cb"
QuestionDot "?."
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "optional_call_caught"
LParen "("
Word "cb"
Colon ":"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RParen ")"
Question "?"
RParen ")"
Arrow "->"
Word "int"
Question "?"
LBrace "{"
Word "cb"
QuestionDot "?."
LParen "("
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
FatArrow "=>"
Word "null"
RBrace "}"
RBrace "}"
Function "function"
Word "test_optional_call_with_throwing_callback"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Question "?"
LBrace "{"
Word "optional_call_rethrows"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "boom"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
